<resources>
    <string name="customization_retry">다시 시도</string>
    <string name="pet_customization_tab_friend">친구</string>
    <string name="pet_customization_tab_accessory">옷과 소품</string>
    <string name="pet_customization_tab_background">배경</string>
    <string name="pet_customization_subtab_all">전체</string>
    <string name="pet_customization_subtab_owned">보유 중</string>
    <string name="pet_customization_count_format">%1$d개</string>
    <string name="pet_item_none">기본 (미착용)</string>
    <string name="pet_item_mobi_headphones">모비 헤드폰</string>
    <string name="pet_item_mobi_goggles">모비 고글</string>
    <string name="pet_item_luna_cap">루나 모자</string>
    <string name="pet_item_luna_sunglasses">루나 선글라스</string>
    <string name="pet_preview_desc_friend_mobi">우리들의 작은 친구 모비에요</string>
    <string name="pet_preview_desc_friend_luna">귀여운 애교쟁이 루나랍니다냥</string>
    <string name="pet_preview_desc_none">내추럴한 모습이에요</string>
    <string name="pet_preview_desc_luna_cap">함께 항해를 떠나볼까요?</string>
    <string name="pet_preview_desc_luna_sunglasses">눈부실 때는 선글라스만한게 없죠~</string>
    <string name="pet_preview_desc_mobi_headphones">노이즈캔슬링으로 운전에 집중!</string>
    <string name="pet_preview_desc_mobi_goggles">빈티지 느낌에는 고글만한게 없죠~</string>
    <string name="pet_background_star">반짝이는 별</string>
    <string name="pet_background_snow">소복소복 눈</string>
    <string name="pet_background_petal">흩날리는 꽃잎</string>
    <string name="pet_preview_desc_background_none">깔끔한 배경화면이에요</string>
    <string name="pet_preview_desc_background_star">반짝반짝 별이 내려요~</string>
    <string name="pet_preview_desc_background_snow">소복소복 눈이 내려요~</string>
    <string name="pet_preview_desc_background_petal">살랑살랑 꽃이 내려요~</string>
...
